syntax = "proto3";

option go_package = "proto;types";

message AgentInfo {
  // System Info
  string Arch = 1;
  int32 NumCpus = 2;

  // Downward API
  string Node = 3;
  string Pod = 4;
  string Namespace = 5;
}

message Empty {}

// Local agent

service LocalAgent {
  rpc Run(RunRequest) returns (RunResponse);
}

message RunRequest {
  string WorkDir = 1;
  string Command = 2;
  repeated string Args = 3;
  repeated string Env = 4;
}

message RunResponse {}


// Remote agent and scheduler

service RemoteAgent {
  rpc Compile(CompileRequest) returns (stream CompileStatus);
}

service Scheduler {
  rpc Schedule(ScheduleRequest) returns (ScheduleResponse);
  rpc Compile(CompileRequest) returns (CompileResponse);
  rpc Connect(stream Empty) returns (stream Empty);
}

message ScheduleRequest {}
message ScheduleResponse {}


message CompileRequest {
  string Command = 2;
  repeated string Args = 3;
  bytes PreprocessedSource = 4;
}

message CompileStatus {
  enum Status {
    Starting = 0;
    Done = 1;
  }

  Status CompileStatus = 2;
  bytes CompiledSource = 3;
}

message CompileResponse {
  bytes CompiledSource = 1;
}
